# obsidian-typst-math

./: Cargo.toml  compiler.ts  esbuild.config.mjs  main.ts  styles.css
pkg/: obsidian_rust_plugin.d.ts  obsidian_rust_plugin.js  obsidian_rust_plugin_bg.wasm.d.ts  package.json  typst_in_obsidian.d.ts  typst_in_obsidian.js  typst_in_obsidian_bg.wasm  typst_in_obsidian_bg.wasm.d.ts
src/: diagnostic.rs  lib.rs  paths.rs  render.rs  world.rs
